# voxelize

strixcraft.io/: README.md  TODO.md  package.json
strixcraft.io/client/: package.json  tsconfig.json  vite.config.ts
strixcraft.io/server/: Cargo.toml
strixcraft.io/server/src/: main.rs
strixcraft.io/server/src/systems/: chat_system.rs  chunk_manager.rs  crafting_system.rs  entity_manager.rs  inventory_system.rs  mod.rs  player_manager.rs  world_manager.rs
strixcraft.io/shared/: package.json
strixcraft.io/shared/src/: index.ts  protocol.ts  types.ts
