[package]
name = "strixcraft-server"
version = "1.0.0"
edition = "2021"
authors = ["StrixCraft Team"]
description = "StrixCraft.io voxel game server"

[dependencies]
voxelize = { path = "../../" }
actix-web = "4.5.1"
actix-cors = "0.7.0"
actix-files = "0.6.5"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.0", features = ["full"] }
log = "0.4.21"
fern = { version = "0.6.2", features = ["colored"] }
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
bcrypt = "0.15"
jsonwebtoken = "9.2"
rand = "0.8"
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"